--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,61 +1,75 @@
-.container{
+.container {
     padding-bottom: 30px;
 }
-.card{
+
+.card.insideCard {
+    height: auto;
+}
+
+.card {
     margin-top: 2vw;
     padding: 10px;
-    p{
-        margin:0;
+    height: 93%;
+    p {
+        margin: 0;
     }
-    .amount{
+    .amount {
         font-size: 14px;
         font-weight: bold;
     }
-    .buyBtn{
+    .buyBtn {
         text-align: center;
+        a:nth-child(2) {
+            text-decoration: none;
+            padding: 0px 0 0 10px;
+        }
     }
-    .price{
+    .price {
         color: #7b7a7a;
     }
-    .card-text{
+    .card-text {
         height: 10vh;
         overflow: hidden;
     }
-    .card-img-top{
-        height: 200px;
+    .card-img-top {
+        width: 50%;
         margin-bottom: 20px;
+        margin: 0 auto;
+        height: 200px;
+        object-fit: contain;
     }
-    .card-title{
+    .card-title {
         font-size: 16px;
+        height: 50px;
     }
 }
-.text-left{
+
+.text-left {
     margin-top: 20px;
 }
-.altiLogo{
+
+.altiLogo {
     padding: 0 10px;
     background: orange;
     border-radius: 7px;
     color: #fff;
 }
 
-
-.insideCard{
-    .card-body{
+.insideCard {
+    .card-body {
         padding: 0;
     }
-    .row{
+    .row {
         justify-content: center;
         align-items: center;
     }
-    .orangeBtn{
+    .orangeBtn {
         background: orange;
-    color: #fff;
-     width: 60px;
-    padding: 2px;
+        color: #fff;
+        width: 60px;
+        padding: 2px;
     }
 }
-
 
 .sidebar {
     height: 100%;
@@ -69,30 +83,30 @@
     transition: 0.5s;
     padding: 0;
     padding-top: 60px;
-  }
-  
-  .sidebar a {
+}
+
+.sidebar a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
     color: #fff;
     display: block;
     transition: 0.3s;
-  }
-  
-  .sidebar a:hover {
+}
+
+.sidebar a:hover {
     color: #f1f1f1;
-  }
-  
-  .sidebar .closebtn {
+}
+
+.sidebar .closebtn {
     position: absolute;
     top: 0;
     right: 25px;
     font-size: 36px;
     margin-left: 50px;
-  }
-  
-  .openbtn {
+}
+
+.openbtn {
     font-size: 20px;
     cursor: pointer;
     background-color: orange;
@@ -100,38 +114,61 @@
     padding: 10px 15px;
     border: none;
     float: right;
-  }
-  
-  .openbtn:hover {
+}
+
+.openbtn:hover {
     background-color: #444;
-  }
-  
-  #main {
+}
+
+#main {
     transition: margin-left .5s;
     padding: 16px;
-  }
-  
-  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-  @media screen and (max-height: 450px) {
-    .sidebar {padding-top: 15px;}
-    .sidebar a {font-size: 18px;}
-  }
+}
 
-  .popup-wrapper{
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+
+@media screen and (max-height: 450px) {
+    .sidebar {
+        padding-top: 15px;
+    }
+    .sidebar a {
+        font-size: 18px;
+    }
+}
+
+.popup-wrapper {
     position: absolute;
     top: 0;
     background: rgb(0 0 0 / 75%);
     height: 100%;
     left: 0;
     right: 0;
-    .cards{
+    .cards {
         width: 50%;
         margin: 0 auto;
         transform: translate(10px, 50%);
         background: #fff;
         border-radius: 10px;
-        ul{
+        ul {
             padding: 0;
         }
     }
-  }
+}
+
+.details {
+    .cards {
+        transform: translate(10px, 10%);
+        padding: 30px;
+        span {
+            position: absolute;
+            right: 30px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        .first {
+            list-style: disc;
+            padding: 0px 0 0 37px;
+        }
+    }
+}
